# social-corrections-mini-rlhf

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: dpo_llama_8b.yaml  sft_llama_8b.yaml
data/: correction_dataset.json  rule_based_results.json
data/processed/: correction_pairs_all.json  sotopia_harvested_pairs.json  test_dpo.jsonl  test_sft.jsonl  train_dpo.jsonl  train_sft.jsonl  val_dpo.jsonl  val_sft.jsonl
data/processed/final_paper/: final_results_summary.txt
data/prompts/: correction_writer.txt  failure_judge.txt  sotopia_judge.txt  sotopia_scenarios.json  sotopia_scenarios_longhorizon.json
notebooks/: rule_based_baseline.ipynb
scripts/: adapt_politerewrite.py  build_jsonl.py  failure_type_breakdown.py  harvest_sotopia.py  label_reliability.py  merge_datasets.py  plot_failure_breakdown.py  plot_longhorizon.py  plot_results.py  recalibrate_judge.py  run_all_eval.py  run_longhorizon_eval.py  train_dpo.py  train_sft.py
src/social_corrections/: __init__.py  taxonomy.py
src/social_corrections/data/: __init__.py  build_jsonl.py  merge_datasets.py  politerewrite_adapter.py  schema.py  sotopia_harvester.py
src/social_corrections/evaluation/: __init__.py  heuristic_scorer.py  llm_judge.py  mmlu_eval.py  politeness_classifier.py  sentence_level_eval.py  sotopia_eval.py
src/social_corrections/inference/: __init__.py  model_client.py
src/social_corrections/rule_based/: __init__.py  rewriter.py
src/social_corrections/training/: __init__.py  dpo_tinker.py  sft_tinker.py
src/social_corrections/utils/: __init__.py  io.py
tests/: conftest.py  test_heuristic_scorer.py  test_rewriter.py  test_schema.py  test_taxonomy.py
